@@ -69,6 +69,7 @@ import com.lilithsthrone.game.dialogue.npcDialogue.offspring.GenericOffspringDia
 import com.lilithsthrone.game.dialogue.places.dominion.cityHall.CityHall;
 import com.lilithsthrone.game.dialogue.places.dominion.cityHall.CityHallDemographics;
 import com.lilithsthrone.game.dialogue.places.dominion.lilayashome.Library;
+import com.lilithsthrone.game.dialogue.places.dominion.lilayashome.LilayaDressingRoomDialogue;
 import com.lilithsthrone.game.dialogue.places.dominion.lilayashome.LilayaMilkingRoomDialogue;
 import com.lilithsthrone.game.dialogue.places.dominion.lilayashome.RoomPlayer;
 import com.lilithsthrone.game.dialogue.places.dominion.nightlife.NightlifeDistrict;
@@ -178,6 +179,9 @@ public class MainController implements Initializable {
 	private Tooltip tooltip;
 	private EventHandler<KeyEvent> actionKeyPressed, actionKeyReleased;
 
+	private int tooltipWidth = 0;
+	private int tooltipHeight = 0;
+	
 	// Responses:
 	public static final int RESPONSE_COUNT = 15;
 	
@@ -229,25 +233,14 @@ public class MainController implements Initializable {
 			@Override
 			public void onChange() {
 				if (Main.game.getPlayer() != null) {
-					Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation()).setDiscovered(true);
-					Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation()).setTravelledTo(true);
-					if (Main.game.getPlayer().getLocation().getY() < Main.game.getActiveWorld().WORLD_HEIGHT - 1) {
-						Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation().getX(), Main.game.getPlayer().getLocation().getY() + 1).setDiscovered(true);
-					}
-					if (Main.game.getPlayer().getLocation().getY() != 0) {
-						Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation().getX(), Main.game.getPlayer().getLocation().getY() - 1).setDiscovered(true);
-					}
-					if (Main.game.getPlayer().getLocation().getX() < Main.game.getActiveWorld().WORLD_WIDTH - 1) {
-						Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation().getX() + 1, Main.game.getPlayer().getLocation().getY()).setDiscovered(true);
-					}
-					if (Main.game.getPlayer().getLocation().getX() != 0) {
-						Main.game.getActiveWorld().getCell(Main.game.getPlayer().getLocation().getX() - 1, Main.game.getPlayer().getLocation().getY()).setDiscovered(true);
-					}
+					Main.game.getPlayer().discoverSurroundingCells();
 					
 					// Make sure that images of present characters are cached
-					for (NPC character : Main.game.getCharactersPresent())
-						if (character.hasArtwork() && Main.getProperties().hasValue(PropertyValue.artwork))
+					for (NPC character : Main.game.getCharactersPresent()) {
+						if (character.hasArtwork() && Main.getProperties().hasValue(PropertyValue.artwork)) {
 							ImageCache.INSTANCE.requestCache(character.getCurrentArtwork().getCurrentImage());
+						}
+					}
 				}
 			}
 		});
@@ -277,7 +270,7 @@ public class MainController implements Initializable {
 	}
 
 	public boolean isPhoneDisabled() {
-		return !Main.game.isStarted() || !Main.game.isInNewWorld();
+		return !Main.game.isStarted() || !Main.game.isInNewWorld() || Main.game.getCurrentDialogueNode().isPhoneDisabled();
 	}
 	
 	public void openPhone() {
@@ -308,9 +301,17 @@ public class MainController implements Initializable {
 	}
 
 	public boolean isInventoryDisabled() {
+		if(Main.game.isBadEnd()) {
+			return false;
+		}
+		
 		if(!Main.game.isInNewWorld() && !Main.game.isInSex()) {
 			return true;
 		}
+		if(Main.game.isInSex() && Main.game.getCurrentDialogueNode().isInventoryForcedDisabledInSex()) {
+			return true;
+		}
+		
 		if (Main.game.getCurrentDialogueNode().getDialogueNodeType() == DialogueNodeType.INVENTORY
 				|| Main.game.isInCombat()
 				/*|| Main.game.isInSex()*/) {
@@ -512,11 +513,67 @@ public class MainController implements Initializable {
 						checkLastKeys();
 						
 						if(event.getCode()==KeyCode.END && Main.DEBUG){
+							
+//							RandomEnchantment.initAllRandomEnchantments();
+//							for(RandomEnchantment enchantment : RandomEnchantment.getAllNegativeClothingEnchantments()) {
+//								AbstractClothing ring = Main.game.getItemGen().generateClothing("innoxia_japanese_kanzashi", false);
+//								enchantment.applyEffects(ring);
+//								ring.setEnchantmentKnown(null, true);
+//								Main.game.getPlayerCell().getInventory().addClothing(ring);
+//							}
+							
+//							Main.game.getPlayerCell().getInventory().addClothing(Main.game.getItemGen().generateClothing("innoxia_bdsm_ornate_chastity_cage", true));
+//							Main.game.getPlayerCell().getInventory().addClothing(Main.game.getItemGen().generateClothing("innoxia_neck_cuff_choker_necklace_triple", true));
+							
+							
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.STOMACH, PresetColour.COVERING_BLACK);
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.TORSO_OVER, PresetColour.COVERING_PINK);
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.MOUTH, PresetColour.COVERING_RED);
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.GROIN, PresetColour.COVERING_BLUE);
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.GROIN, PresetColour.COVERING_GOLD);
+//							Main.game.getNpc(Kate.class).addLipstickMarking(Main.game.getPlayer(), InventorySlot.GROIN, PresetColour.COVERING_WHITE);
+							
+//							int[] ints = new int[] {105, 159, 1090, 1792, 10_050, 10_995};
+//							for(int i : ints) {
+//								System.out.println(i+": "+Util.intToString(i));
+//							}
+							
+//							for(int i=0; i<100; i++) {
+//								GenericSexualPartner npc = new GenericSexualPartner();
+//								try {
+//									Main.game.addNPC(npc, false);
+//									npc.setRandomLocation(WorldType.getWorldTypeFromId("innoxia_fields_elis_tavern_taur"), PlaceType.getPlaceTypeFromId("innoxia_fields_elis_tavern_taur_tables"));
+//								} catch (Exception e) {
+//									e.printStackTrace();
+//								}
+//							}
+							
+//							int rndInt = Util.random.nextInt();
+//							System.out.println(rndInt+ " = " +Util.intToIndividualNumbersString(rndInt));
+							
+//							if(Main.game.isInSex()) {
+//								System.out.println(Main.sex.getInitialSexManager().isHidden(Main.game.getPlayer()));
+//								Main.sex.getTargetedPartner(Main.game.getPlayer()).setForeplayPreference(Main.game.getPlayer(), new SexType(SexAreaOrifice.ANUS, SexAreaPenetration.TONGUE));
+//								Main.sex.getTargetedPartner(Main.game.getPlayer()).setMainSexPreference(Main.game.getPlayer(), new SexType(SexAreaPenetration.PENIS, SexAreaOrifice.MOUTH));
+//								Main.sex.recalculateSexActions();
+//							}
+							
+//							for(GameCharacter partner : Main.sex.getAllParticipants()) {
+//								if(!partner.isPlayer()) {
+//									System.out.println();
+//									System.out.println("#####################################");
+//									System.out.println("##### "+partner.getName()+" #####");
+//									for(SexActionInterface sa : Main.sex.getActionsAvailablePartner(partner, Main.game.getPlayer())) {
+//										System.out.println(sa.toString()+" | "+ sa.getActionTitle());
+//									}
+//								}
+//							}
+							
+//							for(Colour c : ColourListPresets.ALL) {
+//								System.out.println(c.getId());
+//							}
 
-							
-//							System.out.println(Main.sex.getSexPace(Main.game.getPlayer()));
-//							System.out.println(Main.sex.isSexPaceForced(Main.game.getPlayer()));
-							
+//							System.out.println(Main.game.getSavedDialogueNode()==null);
 							
 //							System.out.println(Main.isVersionOlderThan(Game.loadingVersion, "0.4.8.10"));
 							
@@ -528,7 +585,8 @@ public class MainController implements Initializable {
 //								}
 //							}
 							
-//							System.out.println(GenericOrgasms.GENERIC_ORGASM_CREAMPIE.isBaseRequirementsMet());
+//							System.out.println(PenisMouth.BLOWJOB_START.isBaseRequirementsMet());
+							
 //							System.out.println(Main.sex.getOrgasmActionsPlayer().contains(GenericOrgasms.GENERIC_ORGASM_SELF_FACE));
 //							System.out.println(Main.sex.getOrgasmActionsPlayer().contains(GenericOrgasms.GENERIC_ORGASM_CREAMPIE));
 							
@@ -600,12 +658,12 @@ public class MainController implements Initializable {
 //								if(npc.isUnique() && !npc.hasArtwork()
 ////										&& (npc.getWorldLocation().getWorldRegion()==WorldRegion.DOMINION)
 ////										&& npc.isFeminine()
-//										&& npc.getFaceType().getBodyCoveringType(npc).getCategory()!=BodyCoveringCategory.MAIN_SKIN
+//										&& npc.getFaceType().getBodyCoveringType(npc).getCategory()==BodyCoveringCategory.MAIN_SKIN
 ////										&& npc.isAbleToBeImpregnated()
 ////										&& npc.isFeminine()
 ////										&& (npc.getClass().getName().contains("dominion.") || npc.getClass().getName().contains("submission."))
 //										) {
-//									System.out.println(npc.getNameIgnoresPlayerKnowledge() + " "+npc.getClass().getName().split(".npc.")[1]);// + " " + npc.getSurname());
+//									System.out.println(UtilText.parse(npc, "[npc.Race] ([npc.raceStage]) [npc.name(true)] [npc.surname]")+" | "+npc.getClass().getName().split(".npc.")[1]+" ("+npc.getHomeWorldLocation().getName()+")");
 //								}
 //							}
 							
@@ -774,10 +832,9 @@ public class MainController implements Initializable {
 								allowInput = false;
 								if (event.getCode() == KeyCode.ENTER) {
 									enterConsumed = true;
-									Main.game.setContent(new Response("", "", Main.game.getCurrentDialogueNode()));
-								} else {
 									Main.mainController.getWebEngine().executeScript("document.getElementById('hiddenPField').innerHTML=document.getElementById('output_name').value;");
 									EnchantmentDialogue.setOutputName(Main.mainController.getWebEngine().getDocument().getElementById("hiddenPField").getTextContent());
+									Main.game.setContent(new Response("", "", Main.game.getCurrentDialogueNode()));
 								}
 							}
 						}
@@ -803,6 +860,17 @@ public class MainController implements Initializable {
 								}
 							}
 						}
+						if(Main.game.getCurrentDialogueNode() == CosmeticsDialogue.TATTOO_SAVE_LOAD){
+							if((boolean) Main.mainController.getWebEngine().executeScript("document.getElementById('new_save_name') === document.activeElement")) {
+								allowInput = false;
+								if (event.getCode() == KeyCode.ENTER) {
+									enterConsumed = true;
+									Main.mainController.getWebEngine().executeScript("document.getElementById('hiddenPField').innerHTML=document.getElementById('new_save_name').value;");
+									EnchantmentDialogue.saveEnchant(Main.mainController.getWebEngine().getDocument().getElementById("hiddenPField").getTextContent(), false, CosmeticsDialogue.TATTOO_SAVE_LOAD);
+									Main.game.setContent(new Response("Save", "", Main.game.getCurrentDialogueNode()));
+								}
+							}
+						}
 						if(Main.game.getCurrentDialogueNode() == SuccubisSecrets.SHOP_BEAUTY_SALON_TATTOOS_ADD
 								|| Main.game.getCurrentDialogueNode() == CompanionManagement.SLAVE_MANAGEMENT_TATTOOS_ADD
 								|| Main.game.getCurrentDialogueNode() == CharacterCreation.CHOOSE_ADVANCED_APPEARANCE_TATTOOS_ADD
@@ -811,10 +879,9 @@ public class MainController implements Initializable {
 								allowInput = false;
 								if (event.getCode() == KeyCode.ENTER) {
 									enterConsumed = true;
-									Main.game.setContent(new Response("", "", Main.game.getCurrentDialogueNode()));
-								} else {
 									Main.mainController.getWebEngine().executeScript("document.getElementById('hiddenPField').innerHTML=document.getElementById('tattoo_name').value;");
 									CharacterModificationUtils.tattoo.getWriting().setText(Main.mainController.getWebEngine().getDocument().getElementById("hiddenPField").getTextContent());
+									Main.game.setContent(new Response("", "", Main.game.getCurrentDialogueNode()));
 								}
 							}
 						}
@@ -855,7 +922,7 @@ public class MainController implements Initializable {
 										
 										unsuitableName = petNameFeminine.length() > 32 || petNameMasculine.length() > 32;
 										
-										if(petNameFeminine.isBlank() && petNameMasculine.isBlank()) {
+										if(petNameFeminine.trim().isEmpty() && petNameMasculine.trim().isEmpty()) {
 											petName = null;
 										} else {
 											petName = new NameTriplet(petNameMasculine, "", petNameFeminine);
@@ -967,7 +1034,6 @@ public class MainController implements Initializable {
 							}
 						}
 						
-						
 						if((boolean) Main.mainController.getWebEngine().executeScript("document.getElementById('offspringPetNameInputFeminine') === document.activeElement") ||
 						   (boolean) Main.mainController.getWebEngine().executeScript("document.getElementById('offspringPetNameInputMasculine') === document.activeElement")) {
 							allowInput = false;
@@ -990,7 +1056,7 @@ public class MainController implements Initializable {
 
 									unsuitableName = petNameFeminine.length() > 32 || petNameMasculine.length() > 32;
 
-									if(petNameFeminine.isBlank() && petNameMasculine.isBlank()) {
+									if(petNameFeminine.trim().isEmpty() && petNameMasculine.trim().isEmpty()) {
 										petName = null;
 									} else {
 										petName = new NameTriplet(petNameMasculine, "", petNameFeminine);
@@ -1007,6 +1073,29 @@ public class MainController implements Initializable {
 										Main.game.setContent(new Response("Rename", "", Main.game.getCurrentDialogueNode()));
 									}
 									
+								}
+							}
+						}
+
+						if(Main.game.getCurrentDialogueNode() == LilayaDressingRoomDialogue.OUTFIT_EDITOR){
+							if((boolean) Main.mainController.getWebEngine().executeScript("document.getElementById('outfit_name') === document.activeElement")) {
+								allowInput = false;
+								if (event.getCode() == KeyCode.ENTER) {
+									enterConsumed = true;
+									Main.mainController.getWebEngine().executeScript("document.getElementById('hiddenPField').innerHTML=document.getElementById('outfit_name').value;");
+									LilayaDressingRoomDialogue.setOutfitName(Main.mainController.getWebEngine().getDocument().getElementById("hiddenPField").getTextContent());
+									Main.game.setContent(new Response("Outfit editor", "", Main.game.getCurrentDialogueNode()));
+								}
+							}
+						}
+						if(Main.game.getCurrentDialogueNode() == LilayaDressingRoomDialogue.OUTFIT_EDITOR_ITEM_ENCHANT){
+							if((boolean) Main.mainController.getWebEngine().executeScript("document.getElementById('output_name') === document.activeElement")) {
+								allowInput = false;
+								if (event.getCode() == KeyCode.ENTER) {
+									enterConsumed = true;
+									Main.mainController.getWebEngine().executeScript("document.getElementById('hiddenPField').innerHTML=document.getElementById('output_name').value;");
+									LilayaDressingRoomDialogue.setOutputName(Main.mainController.getWebEngine().getDocument().getElementById("hiddenPField").getTextContent());
+									Main.game.setContent(new Response("", "", Main.game.getCurrentDialogueNode()));
 								}
 							}
 						}
@@ -1365,7 +1454,8 @@ public class MainController implements Initializable {
 			MiscController.initDollBrochureListeners();
 			
 		} else if (currentNode.equals(BodyChanging.BODY_CHANGING_ASS)
-				|| currentNode.equals(ScarlettsShop.HELENAS_SHOP_CUSTOM_SLAVE_BODY_ASS)) {
+				|| currentNode.equals(ScarlettsShop.HELENAS_SHOP_CUSTOM_SLAVE_BODY_ASS)
+				|| currentNode.equals(MiscDialogue.SAELLATRIX_DOLL_ASS)) {
 			CreationController.initAnusCapacityListeners();
 			CreationController.initAnusDepthListeners();
 			CreationController.initAnusElasticityListeners();
@@ -1516,7 +1606,8 @@ public class MainController implements Initializable {
 			CreationController.initSpinneretPlasticityListeners();
 			CreationController.initSpinneretWetnessListeners();
 		} else if (currentNode.equals(BodyChanging.BODY_CHANGING_VAGINA)
-				|| currentNode.equals(ScarlettsShop.HELENAS_SHOP_CUSTOM_SLAVE_BODY_VAGINA)) {
+				|| currentNode.equals(ScarlettsShop.HELENAS_SHOP_CUSTOM_SLAVE_BODY_VAGINA)
+				|| currentNode.equals(MiscDialogue.SAELLATRIX_DOLL_PUSSY)) {
 			CreationController.initVaginaCapacityListeners();
 			CreationController.initVaginaDepthListeners();
 			CreationController.initVaginaEggLayerListeners();
@@ -1543,6 +1634,15 @@ public class MainController implements Initializable {
 			}
 		} else if (currentNode.equals(BodyChanging.BODY_CHANGING_SAVE_LOAD)) {
 			FileController.initBodySaveLoadListeners();
+		} else if(currentNode.equals(LilayaDressingRoomDialogue.OUTFITS)) {
+			FileController.initOutfitListeners();
+		} else if(currentNode.equals(LilayaDressingRoomDialogue.OUTFIT_EDITOR)
+				|| currentNode.equals(LilayaDressingRoomDialogue.OUTFIT_EDITOR_ITEM_CHOICE)) {
+			MiscController.initDressingRoomListeners();
+		} else if(currentNode.equals(LilayaDressingRoomDialogue.OUTFIT_EDITOR_ITEM_DYE)) {
+			MiscController.initDressingRoomDyeListeners();
+		} else if(currentNode.equals(LilayaDressingRoomDialogue.OUTFIT_EDITOR_ITEM_ENCHANT)) {
+			MiscController.initDressingRoomEnchantmentListeners();
 		} else if (currentNode.equals(CharacterCreation.BACKGROUND_SELECTION_MENU)) {
 			CreationController.initBackgroundSelectionListeners();
 		} else if (currentNode.equals(CompanionManagement.SLAVE_MANAGEMENT_COSMETICS_OTHER)) {
@@ -1602,6 +1702,8 @@ public class MainController implements Initializable {
 				|| currentNode.equals(CosmeticsDialogue.BEAUTICIAN_TATTOOS_ADD)
 				|| currentNode.equals(SuccubisSecrets.SHOP_BEAUTY_SALON_TATTOOS_ADD)) {
 			CreationController.initTattooAddListeners();
+		} else if(currentNode.equals(CosmeticsDialogue.TATTOO_SAVE_LOAD)) {
+			FileController.initTattooSaveLoadListeners();
 		} else if (currentNode.equals(CharacterCreation.CHOOSE_APPEARANCE)) {
 			CreationController.initAgeListeners();
 			CreationController.initBirthdayListeners();
@@ -1650,6 +1752,8 @@ public class MainController implements Initializable {
 			DebugController.initSpawnItemListeners();
 		} else if (currentNode.equals(DebugDialogue.SPAWN_MENU_SET)) {
 			DebugController.initSpawnSetListeners();
+		} else if (currentNode.equals(DebugDialogue.OUTFIT_VIEWER)) {
+			DebugController.initApplyOutfitListeners();
 		} else if (currentNode.equals(ElementalDialogue.ELEMENTAL_FETISHES)
 				|| currentNode.equals(PhoneDialogue.CHARACTER_FETISHES)) {
 			MiscController.initFetishListeners();
@@ -2577,10 +2681,15 @@ public class MainController implements Initializable {
 						
 						Set<AbstractSubspecies> subspecies = new HashSet<>();
 						subspecies.addAll(pop.getSpecies().keySet());
-						TooltipInformationEventListener el = new TooltipInformationEventListener().setInformation(
-								"Races Present",
-								Util.subspeciesToStringList(subspecies, true)+".",
-								16 + ((subspecies.size()/3)*16));
+						TooltipInformationEventListener el;
+						if(subspecies.isEmpty()) {
+							el = new TooltipInformationEventListener().setInformation("Races Present", "[style.colourDisabled(Unknown)]");
+						} else {
+							el = new TooltipInformationEventListener().setInformation(
+									"Races Present",
+									Util.subspeciesToStringList(subspecies, true)+".",
+									16 + ((subspecies.size()/3)*16));
+						}
 						addEventListener(documentRight, id, "mouseenter", el, false);
 					}
 					i++;
@@ -2814,6 +2923,8 @@ public class MainController implements Initializable {
 			System.err.println("Failed to locate the tooltip sizing box!");
 			e.printStackTrace();
 		}
+		TooltipUpdateThread.cancelThreads = true;
+		Main.mainController.getTooltip().hide();
 		return height;
 	}
 	
@@ -3192,7 +3303,15 @@ public class MainController implements Initializable {
 		webviewTooltip.setMaxWidth(width);
 		webviewTooltip.setMaxHeight(height);
 		tooltip.setMaxWidth(width);
+		tooltip.setPrefWidth(width);
 		tooltip.setMaxHeight(height);
+		tooltip.setPrefHeight(height);
+		tooltipWidth = width;
+		tooltipHeight = height;
+	}
+	
+	public int[] getTooltipSize() {
+		return new int[] {tooltipWidth, tooltipHeight};
 	}
 
 	public KeyboardAction getActionToBind() {
